# typegun

./: README.md  pyproject.toml
src/typegun/: __init__.py
