[project]
name = "typegun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wyattscarpenter", email = "wyattscarpenter@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
typegun = "typegun:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
