[project]
name = "typegun"
version = "0.1.0"
description = "Run a bunch of python typecheckers on a project, to see if there are any problems."
readme = "README.md"
license = "LICENSE.txt"
authors = [
    { name = "wyattscarpenter", email = "wyattscarpenter@gmail.com" }
]
dependencies = ["ruff", "pyright", "mypy", "pytype"]

[project.scripts]
typegun = "typegun:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
