[project]
name = "typegun"
version = "0.2.0"
description = "Run a bunch of python typecheckers on a project, to see if there are any problems."
readme = "README.md"
license = "CC0-1.0"
license-files = ["LICENSE.txt"]
authors = [
    { name = "wyattscarpenter", email = "wyattscarpenter@gmail.com" }
]
dependencies = ["ruff", "pyright", "mypy", "pytype"]
requires-python = ">=3.9" # I know that at least mypy has dropped support for Python 3.8

[project.scripts]
typegun = "typegun:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
